# codeberg-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  shell.nix
.woodpecker/: check_commits.yml  check_fmt.yml  lint.yml  test.yml
crates/cod-actions/: Cargo.toml  README.md
crates/cod-actions/src/: lib.rs  text_manipulation.rs
crates/cod-actions/src/auth/: login.rs  logout.rs
crates/cod-actions/src/issue/: comment.rs  create.rs  edit.rs  list.rs  view.rs
crates/cod-actions/src/label/: create.rs  delete.rs  edit.rs  list.rs
crates/cod-actions/src/milestone/: create.rs  edit.rs  list.rs  mod.rs  view.rs
crates/cod-actions/src/notification/: list.rs  view.rs
crates/cod-actions/src/pull_request/: comment.rs  create.rs  edit.rs  list.rs  mod.rs  view.rs
crates/cod-actions/src/repo/: assignees.rs  clone.rs  create.rs  fork.rs  info.rs  mod.rs
crates/cod-actions/src/user/: info.rs
crates/cod-bin/: Cargo.toml  README.md
crates/cod-bin/src/: lib.rs
crates/cod-cli/: Cargo.toml  README.md
crates/cod-cli/src/: lib.rs  logo.rs
crates/cod-cli/src/auth/: login.rs  logout.rs  mod.rs
crates/cod-cli/src/issue/: comment.rs  create.rs  edit.rs  list.rs  mod.rs  view.rs
crates/cod-cli/src/label/: create.rs  delete.rs  list.rs  mod.rs
crates/cod-cli/src/milestone/: list.rs  mod.rs  view.rs
crates/cod-cli/src/notification/: list.rs  mod.rs  view.rs
crates/cod-cli/src/pull_request/: comment.rs  create.rs  edit.rs  list.rs  mod.rs  view.rs
crates/cod-cli/src/repo/: assignees.rs  clone.rs  create.rs  fork.rs  info.rs  mod.rs
crates/cod-cli/src/user/: info.rs  mod.rs
crates/cod-client/: Cargo.toml  README.md
crates/cod-client/src/: constructor.rs  definition.rs  lib.rs
crates/cod-client/src/general_requests/: delete.rs  get.rs  patch.rs  post.rs  put.rs
crates/cod-client/src/specialized_requests/: mod.rs
crates/cod-endpoints/: Cargo.toml  README.md
crates/cod-endpoints/src/: api.rs  endpoint_generator.rs  lib.rs
crates/cod-git-info/: Cargo.toml  README.md
crates/cod-git-info/src/: lib.rs  repo_owner.rs  username.rs
crates/cod-paths/: Cargo.toml  README.md
crates/cod-render/: Cargo.toml  README.md
crates/cod-render/src/: builder.rs  comment.rs  datetime.rs  lib.rs  spinner.rs  table.rs
crates/cod-render/src/table/: builder.rs  def.rs  text.rs
crates/cod-render/src/ui/: mod.rs
crates/cod-types/: Cargo.toml  README.md
crates/cod-types/src/: client.rs  lib.rs  token.rs
crates/cod-types/src/api/: branch.rs  comment.rs  create_comment_option.rs  create_fork_option.rs  create_issue_comment_option.rs  create_issue_options.rs  create_label_options.rs  create_pull_request_option.rs  edit_issue_option.rs  edit_label_option.rs  edit_milestone_option.rs  issue.rs  issue_status.rs  label.rs  milestone.rs  mod.rs  privacy_type.rs  pull_request.rs  pull_request_meta.rs  repo_info.rs  repository.rs  state_type.rs  user.rs  user_info.rs
crates/cod-types/src/api/create_options/: create_issue_options.rs  create_label_options.rs  create_repo_options.rs
crates/cod-types/src/api/edit_options/: edit_issue_option.rs  edit_milestone_option.rs  edit_pull_request_option.rs  mod.rs
crates/cod-types/src/api/notification/: mod.rs  notification_count.rs  notification_state_type.rs  notification_subject.rs  notification_thread.rs  notification_type.rs
src/: lib.rs  main.rs  run.rs
src/actions/: mod.rs  text_manipulation.rs
src/actions/auth/: login.rs  logout.rs
src/actions/issue/: comment.rs  create.rs  edit.rs  list.rs  view.rs
src/actions/label/: create.rs  delete.rs  edit.rs  list.rs
src/actions/milestone/: create.rs  edit.rs  list.rs  mod.rs  view.rs
src/actions/notification/: list.rs  view.rs
src/actions/pull_request/: comment.rs  create.rs  edit.rs  list.rs  view.rs
src/actions/repo/: assignees.rs  clone.rs  create.rs  fork.rs  info.rs
src/actions/user/: info.rs
src/args/: mod.rs
src/cli/: logo.txt  mod.rs
src/cli/auth/: login.rs  logout.rs  mod.rs
src/cli/issue/: comment.rs  create.rs  edit.rs  list.rs  mod.rs  view.rs
src/cli/label/: delete.rs  edit.rs  list.rs
src/cli/milestone/: create.rs  edit.rs  mod.rs  view.rs
src/cli/notification/: list.rs  mod.rs  view.rs
src/cli/pull_request/: comment.rs  list.rs  mod.rs  view.rs
src/cli/repo/: assignees.rs  clone.rs  create.rs  info.rs  mod.rs
src/cli/user/: info.rs  mod.rs
src/client/: constructor.rs  definition.rs  mod.rs
src/client/general_requests/: delete.rs  get.rs  patch.rs  post.rs  put.rs
src/client/specialized_requests/: mod.rs
src/endpoints/: api.rs  endpoint_generator.rs  mod.rs
src/frontend/: mod.rs
src/frontend/auth/: login.rs  mod.rs
src/git_info/: mod.rs  repo_owner.rs  reponame.rs  username.rs
src/paths/: mod.rs
src/render/: comment.rs  datetime.rs  mod.rs
src/render/table/: builder.rs  def.rs  mod.rs  text.rs
src/render/ui/: mod.rs
src/types/: client.rs  mod.rs  response.rs  token.rs
src/types/api/: comment.rs  followers_info.rs  following_info.rs  issue.rs  issue_labels_option.rs  label.rs  milestone.rs  mod.rs  pull_request.rs  pull_request_meta.rs  repo_info.rs  repository.rs  search_results.rs  state_type.rs  user.rs  user_info.rs
src/types/api/create_options/: create_milestone_option.rs  create_pull_request_option.rs  mod.rs
src/types/api/edit_options/: edit_issue_option.rs  edit_label_option.rs  edit_milestone_option.rs  edit_pull_request_option.rs
src/types/api/notification/: notification_state_type.rs  notification_subject.rs  notification_thread.rs  notification_type.rs
