[package]
name = "codeberg-cli"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["codeberg-cli", "cli", "codeberg", "api", "tool"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "CLI Tool for codeberg similar to gh and glab"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "berg"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive", "cargo"] }
clap_complete = "4.1.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.24.2", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
dirs = "4.0.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive-new = "0.5.9"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
indicatif = "0.17.3"
textwrap = "0.16.0"
term-table = "1.3.2"
inquire = { version = "0.6.0", features = ["editor", "date"] }
webbrowser = "0.8.4"
