[package]
name = "cod-actions"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Drives the codeberg-cli app"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
cod-cli = { version = "0.1.0", path = "../cod-cli" }
cod-client = { version = "0.1.0", path = "../cod-client" }
cod-endpoints = { version = "0.1.0", path = "../cod-endpoints" }
cod-git-info = { version = "0.1.0", path = "../cod-git-info" }
cod-paths = { version = "0.1.0", path = "../cod-paths" }
cod-render = { version = "0.1.0", path = "../cod-render" }
cod-types = { version = "0.1.0", path = "../cod-types" }
inquire = { version = "0.5.3", features = ["editor", "date"] }
reqwest = "0.11.14"
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.37"
webbrowser = "0.8.4"
