[package]
name = "cod-bin"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Wraps main functionality of codeberg-cli"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
cod-actions = { version = "0.2.0", path = "../cod-actions" }
cod-cli = { version = "0.2.0", path = "../cod-cli" }
cod-client = { version = "0.2.0", path = "../cod-client" }
cod-types = { version = "0.2.1", path = "../cod-types" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
