[package]
name = "cod-cli"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Defines the CLI of codeberg-cli"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo"] }
clap_complete = "4.1.1"
cod-types = { version = "0.2.1", path = "../cod-types" }
