[package]
name = "cod-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cod-endpoints = { version = "0.1.0", path = "../cod-endpoints" }
cod-types = { version = "0.1.0", path = "../cod-types" }
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.91"
tracing = "0.1.37"
