[package]
name = "cod-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Provides functionality to talk to codeberg API"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
cod-endpoints = { version = "0.1.0", path = "../cod-endpoints" }
cod-types = { version = "0.1.0", path = "../cod-types" }
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.91"
tracing = "0.1.37"
