[package]
name = "cod-endpoints"
version = "0.1.0"
edition = "2021"
license = "AGPL3"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Constructs the API endpoints for codeberg-api"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cod-git-info = { version = "0.1.0", path = "../cod-git-info" }
reqwest = "0.11.14"
