[package]
name = "cod-git-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cod-endpoints = { version = "0.1.0", path = "../cod-endpoints" }
cod-types = { version = "0.1.0", path = "../cod-types" }
