[package]
name = "cod-paths"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Provides general OS independent paths for codeberg-cli app"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dirs = "4.0.0"
