[package]
name = "cod-render"
version = "0.1.0"
edition = "2021"
license = "AGPL3"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Provides rendering functionalities for codeberg-cli UI"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
term-table = { git = "https://github.com/RobWalt/term-table-rs", branch = "fix/render-fail" }
tokio = "1.24.2"
dialoguer = { git = "https://github.com/RobWalt/dialoguer", branch = "feat/multi-fuzz-selection", features = ["fuzzy-select"] }
anyhow = "1.0.68"
