[package]
name = "cod-render"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["codeberg-cli"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "Provides rendering functionalities for codeberg-cli UI"
homepage = "https://codeberg.org/RobWalt/codeberg-cli"
repository = "https://codeberg.org/RobWalt/codeberg-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
tokio = { version = "1.24.2", features = ["time", "macros"] }
anyhow = "1.0.68"
textwrap = "0.16.0"
term-table = "1.3.2"
inquire = { version = "0.5.3", features = ["editor", "date"] }
