[package]
name = "cod-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
cod-paths = {path = "../cod-paths", version = "0.1.0"}
derive-new = "0.5.9"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.37"
